新增：安装向导程序可以选择“新建数据库”和“使用原来已有的数据库”，重装更方便；

--- a/install/templates/step-1.html
+++ b/install/templates/step-1.html
@@ -10,7 +10,7 @@
 <div class="b">
 	<div class="main">
 		<div class="head">
-			<div class="h_right"><a href="//www.seacms.net" target="_blank">官方网站</a><span>|</span><a href="//www.seacms.net" target="_blank">交流论坛</a></div>
+			<div class="h_right"><a href="//www.seacms.net" target="_blank">官方网站</a><span>|</span><a href="//www.seacms.net/index.php" target="_blank">交流论坛</a></div>
 			<img src="images/logo.png" />
 		</div>
 		<div class="cont">
@@ -26,10 +26,21 @@
 					</ul>
 				</div>
 				<div class="c_c_right">
-
+<style>
+	.content p{
+		text-indent: 2em;
+	}
+	.content p:first{
+		font-weight: 700
+	}
+	.button p{
+		text-indent: 3em;
+		display: inline-block;
+		color:rgba(222,20,20,1)
+	}
+</style>
 <div class="content">
 	<h2>阅读海洋CMS使用协议和版权声明</h2>
-<p>版权所有 (c) 2019，海洋CMS保留所有权利。
 <p>感谢您选择海洋CMS，希望我们的努力能为您提供一个简单、强大的站点解决方案。	
 <p>在您使用海洋CMS建站系统前，请仔细阅读以下信息。除本协议中明确赋予用户的权利、其它权利均保留。如果您不同意以下软件使用许可协议，您不应访问本站/下载本软件，请停止访问和使用，并将其从您的电脑中删除。
 <p>作者开发海洋CMS初衷是作为学习和交流之用，完全免费开源，用户可以非商业性/商业性地下载、安装、复制和散发本软件产品。也可基于本系统进行二次开发、重新演绎发布等，但务必保留本程序版权标示。
@@ -41,9 +52,10 @@
 <p>开发者（海洋）拥有海洋CMS的全部知识产权，包括商标和著作权。本软件只供许可协议，并非出售。只允许您在遵守本协议各项条款的情况下复制、下载、安装、使用或者以其他方式受益于本软件的功能或者知识产权。
 
 <p>海洋CMS遵循GPL开源协议（主题和插件除外），在遵守GPL协议、保留海洋CMS版权的情况下，您可以免费使用本系统。
-<p><strong>您一旦选择安装本程序，即被视为完全理解并接受上述声明条款!</strong>
+<p>本程序版权所有 &copy; 海洋CMS，保留所有权利。同时受各国版权法及国际版权公约的保护。
+
 </div>
-<div class="button"><a href="index.php?step=2">我同意</a> <a href="index.php?step=0">上一步</a></div>
+<div class="button"><p><strong>  您一旦选择安装本程序，即被视为完全理解并接受上述声明条款！</strong></p>☑<a href="index.php?step=2">我同意</a> <a href="index.php?step=0">上一步</a></div>
 				</div>
 			</div>
 			<div class="c_btm"></div>
