--- a/install/templates/step-5.html
+++ b/install/templates/step-5.html
@@ -11,7 +11,7 @@
     <div class="b">
         <div class="main">
             <div class="head">
-                <div class="h_right"><a href="//www.seacms.net" target="_blank">官方网站</a><span>|</span><a href="//www.seacms.net" target="_blank">交流论坛</a></div>
+                <div class="h_right"><a href="//www.seacms.net" target="_blank">官方网站</a><span>|</span><a href="//www.seacms.net/index.php" target="_blank">交流论坛</a></div>
                 <img src="images/logo.png" />
             </div>
             <div class="cont">
