--- a/admin/img/style.css
+++ b/admin/img/style.css
@@ -74,6 +74,7 @@ li{ list-style:none;}
 		/*
 		.rb1{BORDER-RIGHT: #002D96 1px solid; PADDING-RIGHT: 2px; BORDER-TOP: #002D96 1px solid; PADDING-LEFT: 2px; FONT-SIZE: 12px; FILTER: progid:DXImageTransform.Microsoft.Gradient(GradientType=0, StartColorStr=#FFFFFF, EndColorStr=#9DBCEA); BORDER-LEFT: #002D96 1px solid; CURSOR: hand; COLOR: black; PADDING-TOP: 2px; BORDER-BOTTOM: #002D96 1px solid;color:#033d61;}
 		*/
+.tb_style>tr:last-child{width:100%;position:fixed;bottom:0%;left:1%;background-color:rgba(222, 255, 255, 1);}
 .rb1{height:23px;cursor:pointer;}
 .rb2{height:23px;cursor:pointer;}
 .btn{height:23px;cursor:pointer;}
